--- a/test/dev/NB04 - prophet_influx_addon.ipynb
+++ b/test/dev/NB04 - prophet_influx_addon.ipynb
@@ -5,56 +5,15 @@
    "metadata": {},
    "source": [
     "# Librería FB Prophet aplicada a datos de energía consultados en InfluxDB con el Addon para Home Assistant **Prophet InfluxDB Addon**\n",
-    "Este documento ha sido utilizado para probar paso a paso las funciones implementadas en `main.py` del complemento para Home Assistant se va a comprobar el correcto funcionamiento de la implementación que se ha hecho en el contenedor Docker que será necesario tener instalado en Home Assistant para poder hacer uso de la librería Prophet que no ha sido posible ejecutar directamente en el custom component en equipos que corren Home Assistant OS.que finalmente ha quedado documentado en \n",
+    "Este documento ha sido utilizado para probar paso a paso las funciones implementadas en `main.py` del complemento para Home Assistant **Prophet InfluxDB Addon**.\n",
+    "Finalmente se va a comprobar el correcto funcionamiento de la implementación que se ha hecho en el contenedor Docker que será necesario tener instalado en Home Assistant para poder hacer uso de la librería Prophet y que no ha sido posible ejecutar directamente en el custom component en equipos que corren Home Assistant OS.\n",
+    "\n",
+    "El resultado de este desarrollo queda finalmente expuesto en \n",
     "https://github.com/mgenrique/hassos_prophet_addon\n",
     "\n",
-    "Las pruebas se van a realizar sobre los dos sensores que nos proporcionan el consumo de la vivienda:\n",
+    "Las pruebas se van a realizar sobre los dos sensores que nos proporcionan el consumo de la vivienda en el caso de sistemas Victron Energy con dispositivos GX:\n",
     "- Consumo acin to acout: \"sensor.victron_vebus_acin1toacout_228\" (En influx se encuentra en `victron_vebus_acin1toacout_228`)\n",
-    "- Consumo inverter to ac out: \"sensor.victron_vebus_invertertoacout_228\" (En influx se encuentra en `victron_vebus_invertertoacout_228`)\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 513,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\vmware_share\\tfg_dev_env\\vsc_prophet\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "cwd = os.getcwd()\n",
-    "print(cwd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 514,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directorio de trabajo actual: c:\\vmware_share\\tfg_dev_env\\vsc_prophet\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Ajustar el directorio de trabajo si es necesario\n",
-    "# os.chdir('E:/c_vmware_share/vsc_prophet')\n",
-    "\n",
-    "cwd = os.getcwd()\n",
-    "print(f\"Directorio de trabajo actual: {cwd}\")\n"
+    "- Consumo inverter to ac out: \"sensor.victron_vebus_invertertoacout_228\" (En influx se encuentra en `victron_vebus_invertertoacout_228`)\n"
    ]
   },
   {
@@ -66,13 +25,9 @@
     "\n",
     "from influxdb import InfluxDBClient\n",
     "import logging\n",
-    "import plotly.express as px\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from prophet import Prophet\n",
-    "# importar sns\n",
-    "import seaborn as sns\n",
     "\n",
     "host = \"192.168.0.100\"\n",
     "port = 8086\n",
